2010-02-11 S. Thiell <stephane.thiell@cea.fr>
	
	* Version 1.2 beta 3 released.

	* scripts/clush.py: For clush --copy, when --dest is not specified, set
	the destination path to the source dirname path and not the source full
	path.

	* scripts/clush.py: Added option --nostdin to prevent reading from
	standard input (fix trac ticket #49).

	* Engine/Factory.py: Disable Engine.EPoll automatic selection as an issue
	has been found with clush when stdin is a plain file (<file redirections).
	Engine.Poll is now the default engine for all platforms. Created trac
	ticket #56 to follow this issue.

2010-02-10 S. Thiell <stephane.thiell@cea.fr>
	
	* Worker/Worker.py: Added missing WorkerSimple.last_error() method. Fixed
	worker bad argument error exception.

	* Worker/Ssh.py: Added command, source and dest public instance variable.

	* Worker/Pdsh.py: Added command, source and dest public instance variable.

	* scripts/clush.py: Due to set_info() behaviour modifications in
	multi-thread mode, change some set_info() for set_default() to modify
	task specific dictionary synchronously. Also remove splitlines() where
	MsgTreeElem are returned instead of whole buffer after latest MsgTree
	improvements.

	* scripts/clubak.py: Added clubak utility (trac ticket #47). It provides
	 dshbak backward-compatibility, but always try to sort buffers by nodes or
	 nodeset. It also provides additional -L option to switch to alternative
	 line mode display.

2010-02-09 S. Thiell <stephane.thiell@cea.fr>

	* Worker.py: Updated Task/MsgTree dependencies. Added iter_node_errors()
	method. Added match_keys optional parameter to iter_node_buffers() and
	iter_node_errors(). Added WorkerSimple.error() method (read stderr).
	Added tests.

	* Task.py: Updated MsgTree dependencies. Factorized most tree data's
	access methods.

	* MsgTree.py: Merged Msg and _MsgTreeElem in one class MsgTreeElem. All
	message objects returned are now instance of MsgTreeElem. Some algorithms